--- a/index.html
+++ b/index.html
@@ -1,19 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Prata&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Mithila Yatri Niwas</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Prata&display=swap"
+    rel="stylesheet" />
+
+
+  <meta name="robots" content="index,follow">
+  <meta name="Googlebot" content="index, follow">
+  <meta name="distribution" content="Global">
+  <meta name="revisit-after" content="2 Days">
+  <meta name="classification" content="Hotel, Hotels in Nepal">
+  <meta name="category" content="Hotel, Hotels in Nepal">
+  <meta name="language" content="en-us">
+  <meta name="keywords" content="Mithila Yatri Niwas by Stream Peak">
+  <meta name="description" content="Mithila Yatri Niwas by Stream Peak">
+  <meta name="author" content="Purna Shrestha">
+  <base url="https://mithilayatriniwas.com/">
+
+  <link rel="shortcut icon" href="https://mithilayatriniwas.com/images/preference/6yvSV-MITHILA YATRI NIWAS.png">
+  <link rel="apple-touch-icon" href="https://mithilayatriniwas.com/images/preference/6yvSV-MITHILA YATRI NIWAS.png">
+  <link rel="apple-touch-icon" sizes="72x72"
+    href="https://mithilayatriniwas.com/images/preference/6yvSV-MITHILA YATRI NIWAS.png">
+  <link rel="apple-touch-icon" sizes="114x114"
+    href="https://mithilayatriniwas.com/images/preference/6yvSV-MITHILA YATRI NIWAS.png">
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
