feat: Add enquiry venue auto fillup system

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <meta name="keywords" content="Mithila Yatri Niwas by Stream Peak">
   <meta name="description" content="Mithila Yatri Niwas by Stream Peak">
   <meta name="author" content="Purna Shrestha">
-  <base href="/" />
+  <base url="https://mithilayatriniwas.com/">
 
   <link rel="shortcut icon" href="https://mithilayatriniwas.com/images/preference/6yvSV-MITHILA YATRI NIWAS.png">
   <link rel="apple-touch-icon" href="https://mithilayatriniwas.com/images/preference/6yvSV-MITHILA YATRI NIWAS.png">
